Changes since 3.2.1
0. Numerous cleanups, memory leaks corrected, etc.  See README and NEWS.
1. Code cleanup and simplification of directory listing and file
   retrieval code.
2. bbftpd: Use RSA_generate_key_ex instead of deprecated
   RSA_generate_key.  Additional code simplification/cleanup in
   bbftpd_crypt.c.
3. bbftpd: bbftpd_log_reopen was not opening the user-specified
   logfile in child processes
4. bbftpd: Simplified the bbftpd_store functions by removing
   large sections of duplicated code and added additional log
   messages.  Other supporting code changes were made.